--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ body {
   border-radius: 4px;
   border: 1px solid #ccc;
 }
-button {
+/* button {
   display: block;
   width: 100%;
   padding: 10px;
@@ -42,4 +42,4 @@ button {
 }
 button:hover {
   background-color: #45A049;
-}
+} */
