--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,13 @@
-<h1>This is the home page.</h1>
-<button id="testBtn" type="button">Click me</button>
+<h1 class="text-center m-5">Ball Dont Lie.</h1>
+<button class="btn btn-warning" id="testBtn" type="button">Click me</button>
+<searchbar class="m-5">
+    <h5 for="playerNameInput" class="form-label text-center">Input Player Name</>
+  <form class="d-flex d-row col-5 justify-content-center m-auto" id="playerSearchBar">
+    <input type="text" class="form-control" id="playerNameInput">
+    <button type="submit" class="btn btn-success" id="playerNameSubmitBtn">Search</button>
+  </form>
+</searchbar>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="./js/app.js"></script>
