--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,4 +30,5 @@
 
 <button type="button" id="logoutBtn">Logout</button>
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./js/login.js"></script>
