--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,6 @@
-<h1 class="text-center m-5">Ball Dont Lie.</h1>
-<button class="btn btn-warning" id="testBtn" type="button">Click me</button>
-<searchbar class="m-5">
-    <h5 for="playerNameInput" class="form-label text-center">Input Player Name</>
-  <form class="d-flex d-row col-5 justify-content-center m-auto" id="playerSearchBar">
-    <input type="text" class="form-control" id="playerNameInput">
-    <button type="submit" class="btn btn-success" id="playerNameSubmitBtn">Search</button>
-  </form>
-</searchbar>
+<h1 class="text-center m-5 p-5 card bg-dark">Ball Dont Lie.</h1>
+
+{{> searchbar}}
 
 <div id="results"></div>
 
