--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,10 @@
 }
 
 #footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
-  height: 2.5rem;    
+  /* height: 2.5rem;     */
 }
 
 /* body {
