--- a/views/layouts/player.handlebars
+++ b/views/layouts/player.handlebars
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="icon" href="./assets/images/favicon.ico">
+  <title>Results</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="icon" href="../assets/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
-
-<body class="bg-light-subtle">
+<body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        <img src="./assets/images/balldontlielogo.svg" alt="balldontlie logo" width="75">
+        <img src="../assets/images/balldontlielogo.svg" alt="balldontlie logo" width="75">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,8 +36,6 @@
     </div>
   </nav>
   {{{body}}}
-
   {{> axios}}
 </body>
-
 </html>
