--- a/views/player.handlebars
+++ b/views/player.handlebars
@@ -12,6 +12,7 @@
     {{#if playerData.player.weight_pounds}}
     <h2 class="card-text">Weight: {{playerData.player.weight_pounds}} lbs</h2>
     {{/if}}
+    <button type="button" class="btn btn-danger mt-2">Delete Player</button>
   </div>
 </div>
 {{#if playerData.stats}}
