--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,14 +14,14 @@
 <body class="bg-light-subtle">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <a class="navbar-brand ms-2" href="/">
         <img src="./assets/images/balldontlielogo.svg" alt="balldontlie logo" width="75">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse fs-4 mx-3" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -31,7 +31,7 @@
           </li>
         </ul>
         <div class="navbar-nav">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" id="loginStatusBtn"></a>
         </div>
       </div>
     </div>
@@ -39,6 +39,7 @@
   {{{body}}}
 
   {{> axios}}
+  <script src="./js/auth.js"></script>
 </body>
 
 </html>
