updated Team.js model

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,13 +31,12 @@
           </li>
         </ul>
         <div class="navbar-nav">
-          <a class="nav-link" id="loginStatusBtn"></a>
+          <a class="nav-link" id="loginStatusBtn" href="/login">Login</a>
         </div>
       </div>
     </div>
   </nav>
   {{{body}}}
-
   {{> axios}}
   <script src="./js/auth.js"></script>
 </body>
