logout button functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
         </ul>
         <div class="navbar-nav">
           <a class="nav-link" id="loginStatusBtn" href="/login">Login</a>
+          <button class='nav-link' id="logoutBtn"></button>
         </div>
       </div>
     </div>
