--- a/views/layouts/player.handlebars
+++ b/views/layouts/player.handlebars
@@ -31,6 +31,7 @@
         </ul>
         <div class="navbar-nav">
           <a class="nav-link" id="loginStatusBtn"></a>
+          <button class='nav-link' id="logoutBtn"></button>
         </div>
       </div>
     </div>
