--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,6 @@
-<h1 class="text-center m-5 p-5 card bg-dark">Ball Dont Lie.</h1>
+<div id="ballDontLie" class="text-center m-5 p-5 card">
+  <h1>Ball Don't Lie.</h1>
+</div>
 
 {{> searchbar}}
 
