--- a/views/layouts/player.handlebars
+++ b/views/layouts/player.handlebars
@@ -30,7 +30,7 @@
           </li>
         </ul>
         <div class="navbar-nav">
-          <a class="nav-link" id="loginStatusBtn"></a>
+          <a class="nav-link" id="loginStatusBtn" href="/login">Login</a>
           <button class='nav-link' id="logoutBtn"></button>
         </div>
       </div>
