--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,25 +1,26 @@
 <div class="m-3" id="resultsContainer">
-  {{#each playerResults as |player|}}
   
   <div class="card">
-    <div class="card-header fs-5">
-      Featured
+    <div class="card-header fs-2 text-center text-light">
+      Search Results
     </div>
-    <div class="card-body">
-      <h4 class="card-text">{{player.first_name}} {{player.last_name}}</h4>
-      <h5 class="card-text">Team: {{player.team.full_name}}</h5>
-      <h5 class="card-text">Position: {{player.position}}</h5>
-      {{#if player.height_feet}}
-      <h5 class="card-text">Height: {{player.height_feet}}' {{player.height_inches}}"</h5>
-      {{/if}}
-      {{#if player.weight_pounds}}
-      <h5 class="card-text">Weight: {{player.weight_pounds}} lbs</h5>
-      {{/if}}
-      <button type="button" class="btn btn-primary" data-player_id="{{player.id}}" data-first_name="{{player.first_name}}" data-last_name="{{player.last_name}}" id="savePlayerBtn">Save Player</button>
-    </div>
+      <div class="card-body">
+        {{#each playerResults as |player|}}
+        <h4 class="card-text">{{player.first_name}} {{player.last_name}}</h4>
+        <h5 class="card-text">Team: {{player.team.full_name}}</h5>
+        <h5 class="card-text">Position: {{player.position}}</h5>
+        {{#if player.height_feet}}
+        <h5 class="card-text">Height: {{player.height_feet}}' {{player.height_inches}}"</h5>
+        {{/if}}
+        {{#if player.weight_pounds}}
+        <h5 class="card-text">Weight: {{player.weight_pounds}} lbs</h5>
+        {{/if}}
+        <button type="button" class="btn btn-primary" data-player_id="{{player.id}}" data-first_name="{{player.first_name}}" data-last_name="{{player.last_name}}" id="savePlayerBtn">Save Player</button>
+        <hr class="py-2">
+        {{/each}}
+      </div>
   </div>
   
-  {{/each}}
 </div>
 
 <script src="../js/savePlayer.js"></script>
