player endpoint styling

--- a/views/partials/searchbar.handlebars
+++ b/views/partials/searchbar.handlebars
@@ -1,5 +1,5 @@
 <searchbar class="card m-5">
-  <h2 for="playerNameInput" class="card-header form-label text-center mb-3">Search for a player</h2>
+  <h2 for="playerNameInput" class="card-header form-label text-center py-3">Search for a player</h2>
     <form class="d-flex d-row col-8 justify-content-center m-auto py-5 card-body" id="playerSearchBar">
       <input type="text" class="form-control text-center" id="playerNameInput">
       <button type="submit" class="btn btn-success px-4" id="playerNameSubmitBtn">Search</button>
