--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse fs-4 mx-3" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbarLinks">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
@@ -31,7 +31,7 @@
           </li>
         </ul>
         <div class="navbar-nav">
-          <a class="nav-link" id="loginStatusBtn" href="/login">Login</a>
+          <a class="nav-link" id="loginStatusBtn" href="/login"></a>
           <button class='nav-link' id="logoutBtn"></button>
         </div>
       </div>
