--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,25 @@
   </nav>
   {{{body}}}
   {{> axios}}
-  <script src="./js/auth.js"></script>
+<footer id="footer" class="bg-body-tertiary">
+  <p>Ball Don't Lie is optimized for fun and education.
+  pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
+  all content. While using Ball Don't Lie, you agree to have read and accepted our terms of use, cookie and privacy policy.
+  <br>
+  <br>
+  Copyright 1999-2023 by Refsnes Data. All Rights Reserved.
+  Ball Don't Lie is Powered by Strong Individuals.
+    <br>
+<a class="navbar-brand ms-2" href="/">
+  <img src="./assets/images/balldontlielogo.svg" alt="balldontlie logo" width="75">
+</a>
+    {{!-- <a href="mailto:hege@example.com">hege@example.com</a> --}}
+  </p>
+</footer>  
+<script src="./js/auth.js"></script>
 </body>
+
+
+
 
 </html>
