--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,11 +47,8 @@
   <br>
   Copyright 1999-2023 by Refsnes Data. All Rights Reserved.
   Ball Don't Lie is Powered by Strong Individuals.
-    <br>
-<a class="navbar-brand ms-2" href="/">
-  <img src="./assets/images/balldontlielogo.svg" alt="balldontlie logo" width="75">
-</a>
-    {{!-- <a href="mailto:hege@example.com">hege@example.com</a> --}}
+  <br>
+  <small><a class="text-decoration-none text-secondary" href="https://github.com/epicasino/balldontlie-tracker">GitHub</a></small>
   </p>
 </footer>  
 <script src="./js/auth.js"></script>
