--- a/views/layouts/player.handlebars
+++ b/views/layouts/player.handlebars
@@ -37,6 +37,20 @@
     </div>
   </nav>
   {{{body}}}
+  <footer id="footer" class="bg-body-tertiary">
+    <p>Ball Don't Lie is optimized for fun and education.
+      pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
+      all content. While using Ball Don't Lie, you agree to have read and accepted our terms of use, cookie and privacy
+      policy.
+      <br>
+      <br>
+      Copyright 1999-2023 by Refsnes Data. All Rights Reserved.
+      Ball Don't Lie is Powered by Strong Individuals.
+      <br>
+      <small><a class="text-decoration-none text-secondary"
+          href="https://github.com/epicasino/balldontlie-tracker">GitHub</a></small>
+    </p>
+  </footer>
   {{> axios}}
   <script src="../js/auth.js"></script>
 </body>
