--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,12 +40,12 @@
   {{{body}}}
   {{> axios}}
 <footer id="footer" class="bg-body-tertiary">
-  <p>Ball Don't Lie is optimized for fun and education.
-  pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
+  <p>Ball Don't Lie. The ultimate basketball search and tracker application.
+  All pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
   all content. While using Ball Don't Lie, you agree to have read and accepted our terms of use, cookie and privacy policy.
   <br>
   <br>
-  Copyright 1999-2023 by Refsnes Data. All Rights Reserved.
+  Copyright 2023 by Ball Don't Lie. All Rights Reserved.
   Ball Don't Lie is Powered by Strong Individuals.
   <br>
   <small><a class="text-decoration-none text-secondary" href="https://github.com/epicasino/balldontlie-tracker">GitHub</a></small>
