--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BallDontLie.</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="icon" href="./assets/images/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -41,13 +41,10 @@
   {{> axios}}
 <footer id="footer" class="bg-body-tertiary">
   <p>Ball Don't Lie. The ultimate basketball search and tracker application.
-  All pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
-  all content. While using Ball Don't Lie, you agree to have read and accepted our terms of use, cookie and privacy policy.
-  <br>
-  <br>
-  Copyright 2023 by Ball Don't Lie. All Rights Reserved.
-  Ball Don't Lie is Powered by Strong Individuals.
-  <br>
+  <p>All pages, links, and results are constantly reviewed to avoid errors, but we cannot warrant full correctness of
+  all content. While using Ball Don't Lie, you agree to have read and accepted our terms of use, cookie and privacy
+  policy.</p>
+  <p>Copyright 2023 by Ball Don't Lie. All Rights Reserved.</p>
   <small><a class="text-decoration-none text-secondary" href="https://github.com/epicasino/balldontlie-tracker">GitHub</a></small>
   </p>
 </footer>  
