--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,12 @@
 
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .navbar {
   border-radius: 0 0 15px 15px;
   -webkit-border-radius: 0 0 15px 15px;
@@ -71,7 +77,7 @@
 }
 
 #loginCard, #registerCard {
-  height: 40vh;
+  height: 50vh;
   width: 30vw;
   box-shadow: .5rem .5rem 2px 1px var(--col5), -.5rem -.5rem 2px 1px var(--col4);
 }
@@ -103,22 +109,24 @@
 }
 
 #footer {
+  margin-top: auto;
   display: flex;
   justify-content: center;
-  align-content: center;
+  flex-direction: column;
   font-size: .75em;
   text-align: center;
-  position:fixed;
-  left:0px;
-  bottom:0px;
   height:12%;
   width:100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+p {
+margin-bottom: 0;
 }
 
 #footer > p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 15px;
-  margin-top: 1%;
 }
