--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center" id="loginRegCards">
-  <form class="card m-5" id="registerCard">
+  <form autocomplete="off" class="card m-5" id="registerCard">
     <h2 class="card-header">Register</h2>
     <div class="card-body">
       <div class="mb-3">
@@ -16,7 +16,7 @@
     </div>
   </form>
   
-  <form class="card m-5" id="loginCard">
+  <form autocomplete="off" class="card m-5" id="loginCard">
     <h2 class="card-header">Login</h2>
     <div class="card-body">
       <div class="mb-3">
