--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,3 +130,14 @@ margin-bottom: 0;
   flex-direction: column;
   justify-content: center;
 }
+
+#notFoundContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
+#notFoundContainer > h1 {
+  font-size: 4em;
+}
