--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -25,12 +25,24 @@
     {{#if teamData}}
       <div class="card-body text-center">
           <h1>{{teamData.full_name}}</h1>
+          <h2>Conference: {{teamData.conference}}</h2>
+          <h2>Division: {{teamData.division}}</h2>
           <img data-team_id="{{teamData.id}}" id="teamImg">
       </div>
     {{/if}}
   </div>
   
 </div>
+
+{{#if teamData}}
+  <div class="card">
+    <div class="card-header fs-2 text-center text-light">
+      Recent Games
+    </div>
+    <div class="card-body">
+
+    </div>
+{{/if}}
 
 {{> axios}}
 <script src="../js/savePlayer.js"></script>
