--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -31,10 +31,10 @@
       </div>
     {{/if}}
   </div>
-  
 </div>
 
 {{#if teamData}}
+<div class="m-3" id="recentGamesContainer">
   <div class="card">
     <div class="card-header fs-2 text-center text-light">
       Recent Games
@@ -42,6 +42,27 @@
     <div class="card-body">
 
     </div>
+    {{!-- <div class="card-footer">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          {{!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li> --}}
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div> --}}
+  </div>
+</div>
 {{/if}}
 
 {{> axios}}
