added team game data api call

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -42,7 +42,7 @@
     <div class="card-body">
 
     </div>
-    {{!-- <div class="card-footer">
+    <div class="card-footer">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item">
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </nav>
-    </div> --}}
+    </div>
   </div>
 </div>
 {{/if}}
