--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -42,23 +42,31 @@
     <div class="card-body">
       {{#each teamGames as |game|}}
         <div class="card my-4">
-          <div class="card-header text-center text-light">
+          <div class="card-header text-center text-light p-4">
             <h2>{{game.home_team.full_name}} VS. {{game.visitor_team.full_name}}</h2>
             <h5>{{game.date}}</h5>
           </div>
           <div class="card-body d-flex justify-content-center m-3">
-            <div class="card text-center col-6 p-3 m-3">
-              <h4>Home</h4>
-              <h1>{{game.home_team.full_name}}</h1>
-              <img data-team_id="{{game.home_team.id}}" id="teamImg">
-              <h2>Score: {{game.home_team_score}}</h2>
+            <div class="card text-center col-6 m-3">
+              <div class="card-header p-3">
+                <h2>Home</h2>
+              </div>
+              <div class="card-body">
+                <h1>{{game.home_team.full_name}}</h1>
+                <img data-team_id="{{game.home_team.id}}" id="teamImg">
+                <h2>Score: {{game.home_team_score}}</h2>
+              </div>
             </div>
             
-            <div class="card text-center col-6 p-3 m-3">
-              <h4>Away</h4>
-              <h1>{{game.visitor_team.full_name}}</h1>
-              <img data-team_id="{{game.visitor_team.id}}" id="teamImg">
-              <h2>Score: {{game.visitor_team_score}}</h2>
+            <div class="card text-center col-6 m-3">
+              <div class="card-header p-3">
+                <h2>Away</h2>
+              </div>
+              <div class="card-body">
+                <h1>{{game.visitor_team.full_name}}</h1>
+                <img data-team_id="{{game.visitor_team.id}}" id="teamImg">
+                <h2>Score: {{game.visitor_team_score}}</h2>
+              </div>
             </div>
           </div>
         </div>
